--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0"
+    "socket.io-client": "^4.4.0",
+    "webpack-bundle-analyzer": "^4.8.0"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
